--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "react-scroll": "^1.9.2"
+    "react-scroll": "^1.9.2",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
